// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storageDataTypes persist and read data of various types 1`] = `
Object {
  "id": "1",
  "typeBigInt": "34567890987654",
  "typeBoolean": true,
  "typeDate": 2002-03-04T00:00:00.000Z,
  "typeFloat": "934234.111243",
  "typeId": "43455523",
  "typeInteger": 729393827,
  "typeJson": Object {
    "nested": Object {
      "level2": Array [
        1,
        6,
        9,
      ],
    },
    "simple": 123,
  },
  "typeString": "Random text",
  "typeTime": "11:12:13",
  "typeTimeTz": "12:13:14+15:16",
  "typeTimestamp": 2000-01-02T11:12:13.000Z,
  "typeTimestampTz": 2001-02-02T20:57:14.000Z,
  "typeUuid": "7f7fa058-7072-44a8-a70b-a5846f63b3fd",
}
`;

exports[`storageDataTypes persist and read data of various types 2`] = `
DataTypeTester {
  "id": "1",
  "typeBigInt": "34567890987654",
  "typeBoolean": true,
  "typeDate": "2002-03-04",
  "typeFloat": "934234.111243",
  "typeId": "43455523",
  "typeInteger": 729393827,
  "typeJson": Object {
    "nested": Object {
      "level2": Array [
        1,
        6,
        9,
      ],
    },
    "simple": 123,
  },
  "typeString": "Random text",
  "typeTime": "11:12:13",
  "typeTimeTz": "12:13:14+15:16",
  "typeTimestamp": 2000-01-02T11:12:13.000Z,
  "typeTimestampTz": 2001-02-02T20:57:14.000Z,
  "typeUuid": "7f7fa058-7072-44a8-a70b-a5846f63b3fd",
}
`;
